전남대 BE_조현서 6주차 과제 (2단계) (#273)
* feat: Add CustomException

* refactor: API 명세서에 따른 카테고리 수정

* refactor: 에러 코드 반환 순서 지정

* refactor: API 명세서와 관련하여 멤버 코드 수정

* refactor: API 명세서에 따른 상품 생성 수정

* refactor: API 명세서에 따른 상품조회,수정,삭 제수정

* refactor: quantity -> StockQuantity 로 변수명 수정

* refactor: API 명세서에 따른 위시 수정

* refactor: API 명세서에 따른 상품 옵션 수정

* refactor: 토큰 관련 예외처리 추가

* refactor: API 명세서에 따른 주문 관련 수정

* refactor: 예외 처리 수정

* refactor: "Bearer " 추가

* refactor: 예외처리 수정

* refactor: 회원 응답 형식 수정

* refactor: WebProductController 수정

* feat: 옵션 수량 차감 기능 복구

* refactor: 팀 API 명세서에 따른 카테고리 수정

* refactor: 팀 API 명세서에 따른 상품 수정

* refactor: 팀 API 명세서에 따른 위시리스트 수정

* refactor: 팀 API 명세서에 따른 상품 옵션 수정

* refactor: 팀 API 명세서에 따른 주문 수정

* chore: Update Step1 Readme.md

* test: 테스트 코드 수정

repository와 service 수정으로 인한 테스트 코드 수정

* style: 코드 스타일 정렬

* style: 사용하지 않는 import문 삭제

* refactor: 주문하기 중 나에게 메세지 보내기 수정

멤버에 refresh_token을 추가하였고, 카카오api에서 이메일을 받아올 수
없어서 임시 이메일을 만들어서 jwt 추출하고 해당 jwt로 주문하기 시
메세지와 주문 둘 다 되도록 수정하였습니다.

* feat: cors 추가

* fix: cors 설정 수정

* fix: cors 수정

* chore: 앱키 및 리디렉션url 숨기기

* feat: '/'에 매핑되는 homepage 추가

* feat: 배포 shell script 추가

* docs: Update Step2 Readme.md

* fix: ip주소 변경