@@ -6,7 +6,7 @@ import gift.service.CategoryService;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Map;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
@@ -25,12 +25,13 @@ public class FrontCategoryController {
 
     @GetMapping
     @Operation(summary = "카테고리 목록 조회", description = "모든 카테고리의 목록을 조회한다.")
-    public ResponseEntity<List<CategoryResponse>> getAllCategories() {
+    public ResponseEntity<Map<String, List<CategoryResponse>>> getAllCategories() {
         List<Category> categories = categoryService.findAll();
         List<CategoryResponse> response = categories.stream()
             .map(CategoryResponse::from)
-            .collect(Collectors.toList());
-        return ResponseEntity.ok(response);
+            .toList();
+        Map<String, List<CategoryResponse>> result = Map.of("categories", response);
+        return ResponseEntity.ok(result);
     }
 
 }
